# mpqcli

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.glibc  Dockerfile.musl  Dockerfile.valgrind  Makefile  README.md
.github/workflows/: docs.yml  lint.yml  main.yml  pr.yml  release.yml  test.yml  valgrind.yml
docs/: SUMMARY.md  building.md  changelog.md  commands_list.md  contributing.md  installation.md  introduction.md
docs/commands/: about.md  add.md  compact.md  completion.md  create.md  extract.md  remove.md  version.md
scripts/: run_valgrind_tests.sh
src/: CMakeLists.txt  commands.cpp  commands.h  completion.cpp  completion.h  completion_data.h.in  gamerules.cpp  gamerules.h  helpers.cpp  helpers.h  locales.cpp  locales.h  main.cpp  mpq.cpp  mpq.h  validators.h
src/completion/: mpqcli.bash  mpqcli.fish  mpqcli.ps1  mpqcli.zsh
test/: conftest.py  requirements.txt  test_add.py  test_compact.py  test_completion.py  test_create.py  test_extract.py  test_info.py  test_list.py  test_read.py  test_remove.py  test_verify.py
